// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`iOS BpkDialingCodeListItem should render correctly 1`] = `
<View
  accessibilityComponentType="button"
  accessibilityLabel="44 United Kingdom"
  accessibilityTraits={
    Array [
      "button",
    ]
  }
  accessible={true}
  hitSlop={undefined}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "row",
      "justifyContent": "space-between",
      "padding": 16,
    }
  }
  testID={undefined}
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "borderColor": "rgb(230, 228, 235)",
            "borderWidth": 1,
          },
          Object {
            "height": 16,
            "width": 24,
          },
        ]
      }
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "rgb(82, 76, 97)",
            "fontFamily": "System",
            "fontSize": 17,
            "fontWeight": "400",
          },
          Array [
            Object {
              "flex": 1,
              "marginLeft": 24,
            },
            null,
          ],
        ]
      }
    >
      44
       
      United Kingdom
    </Text>
  </View>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "rgb(82, 76, 97)",
          "fontFamily": "BpkIcon",
          "fontSize": 24,
          "lineHeight": 24,
        },
        Object {
          "fontSize": 16,
          "lineHeight": 16,
        },
        Array [
          Object {
            "color": "rgb(0, 157, 189)",
            "opacity": 0,
          },
        ],
      ]
    }
  >
    
  </Text>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "rgb(37, 32, 51)",
          "bottom": 0,
          "flex": 1,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
      ]
    }
  />
</View>
`;

exports[`iOS BpkDialingCodeListItem should support the "flagImage" property 1`] = `
<View
  accessibilityComponentType="button"
  accessibilityLabel="44 United Kingdom"
  accessibilityTraits={
    Array [
      "button",
    ]
  }
  accessible={true}
  hitSlop={undefined}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "row",
      "justifyContent": "space-between",
      "padding": 16,
    }
  }
  testID={undefined}
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <Image
      resizeMode="contain"
      style={
        Array [
          Object {
            "borderColor": "rgb(230, 228, 235)",
            "borderWidth": 1,
          },
          Object {
            "height": 16,
            "width": 24,
          },
        ]
      }
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "rgb(82, 76, 97)",
            "fontFamily": "System",
            "fontSize": 17,
            "fontWeight": "400",
          },
          Array [
            Object {
              "flex": 1,
              "marginLeft": 24,
            },
            null,
          ],
        ]
      }
    >
      44
       
      United Kingdom
    </Text>
  </View>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "rgb(82, 76, 97)",
          "fontFamily": "BpkIcon",
          "fontSize": 24,
          "lineHeight": 24,
        },
        Object {
          "fontSize": 16,
          "lineHeight": 16,
        },
        Array [
          Object {
            "color": "rgb(0, 157, 189)",
            "opacity": 0,
          },
        ],
      ]
    }
  >
    
  </Text>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "rgb(37, 32, 51)",
          "bottom": 0,
          "flex": 1,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
      ]
    }
  />
</View>
`;

exports[`iOS BpkDialingCodeListItem should support the "selected" property 1`] = `
<View
  accessibilityComponentType="button"
  accessibilityLabel="44 United Kingdom"
  accessibilityTraits={
    Array [
      "button",
    ]
  }
  accessible={true}
  hitSlop={undefined}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "row",
      "justifyContent": "space-between",
      "padding": 16,
    }
  }
  testID={undefined}
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "borderColor": "rgb(230, 228, 235)",
            "borderWidth": 1,
          },
          Object {
            "height": 16,
            "width": 24,
          },
        ]
      }
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "rgb(82, 76, 97)",
            "fontFamily": "System",
            "fontSize": 17,
            "fontWeight": "400",
          },
          Array [
            Object {
              "flex": 1,
              "marginLeft": 24,
            },
            Object {
              "color": "rgb(0, 157, 189)",
            },
          ],
        ]
      }
    >
      44
       
      United Kingdom
    </Text>
  </View>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "rgb(82, 76, 97)",
          "fontFamily": "BpkIcon",
          "fontSize": 24,
          "lineHeight": 24,
        },
        Object {
          "fontSize": 16,
          "lineHeight": 16,
        },
        Array [
          Object {
            "color": "rgb(0, 157, 189)",
            "opacity": 0,
          },
          Object {
            "opacity": 1,
          },
        ],
      ]
    }
  >
    
  </Text>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "rgb(37, 32, 51)",
          "bottom": 0,
          "flex": 1,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
      ]
    }
  />
</View>
`;
